force-app/main/default/objects/SBQQ__Quote__c/fields/Actual_Delivery_Period__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Period__c</fullName>
    <label>Actual Delivery Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Period</valueSetName>
    </valueSet>
</CustomField>