force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Feature_Added__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feature_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Feature Added</label>
    <type>Checkbox</type>
</CustomField>