force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
    <fullName>Approval_Stage__c</fullName>
    <label>Approval Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount and  Warranty Approved</fullName>
            </value>
            <value>
                <fullName>Technical Validation Approved</fullName>
            </value>
            <value>
                <fullName>Commercial Validation Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>