force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Approved by Technical Validator</fullName>
            </value>
            <value>
                <fullName>Rejected by Technical Validator</fullName>
            </value>
            <value>
                <fullName>Approved by Commercial Validator</fullName>
            </value>
            <value>
                <fullName>Rejected by Commercial Validator</fullName>
            </value>
            <value>
                <fullName>Approved by Head of Government Channel</fullName>
            </value>
            <value>
                <fullName>Rejected by Head of Government Channel</fullName>
            </value>
            <value>
                <fullName>Approved by NH/CEO</fullName>
            </value>
            <value>
                <fullName>Rejected by NH/CEO</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved by CEO</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected by CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>