force-app/main/default/objects/SBQQ__Quote__c/fields/Average_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Markup_Amount__c</fullName>
    <formula>IF(Count_of_Quotelines_with_Markup_Amount__c &gt; 0, Total_Markup_Amount__c / Count_of_Quotelines_with_Markup_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>