force-app/main/default/objects/SBQQ__Quote__c/fields/Average_Markup_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Markup_Rate__c</fullName>
    <formula>IF(Count_of_Quotelines_with_Markup_Percent__c &gt; 0,  Total_Markup_Rate__c / Count_of_Quotelines_with_Markup_Percent__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Markup Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>