force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Number__c</fullName>
    <formula>Bank_Detail__r.Account_Number__c</formula>
    <label>Bank Account Number</label>
    <type>Text</type>
</CustomField>