force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_Address__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address__c</fullName>
    <formula>Bank_Detail__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Address</label>
    <type>Text</type>
</CustomField>