force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch__c</fullName>
    <formula>Bank_Detail__r.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Branch</label>
    <type>Text</type>
</CustomField>