force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_Detail__c.field-meta.xml
<CustomField>
    <fullName>Bank_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Detail</label>
    <referenceTo>Bank_Detail__c</referenceTo>
    <relationshipLabel>Custom Quotes</relationshipLabel>
    <relationshipName>Custom_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>