force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_IFSC_Code__c</fullName>
    <formula>Bank_Detail__r.IFSC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank IFSC Code</label>
    <type>Text</type>
</CustomField>