force-app/main/default/objects/SBQQ__Quote__c/fields/Bank_State__c.field-meta.xml
<CustomField>
    <fullName>Bank_State__c</fullName>
    <formula>Bank_Detail__r.State__c</formula>
    <label>Bank State</label>
    <type>Text</type>
</CustomField>