force-app/main/default/objects/SBQQ__Quote__c/fields/Capacity_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Utilization__c</fullName>
    <label>Capacity Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>