force-app/main/default/objects/SBQQ__Quote__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>Field to add any comments on Quote</inlineHelpText>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>