force-app/main/default/objects/SBQQ__Quote__c/fields/commercial_Approved__c.field-meta.xml
<CustomField>
    <fullName>commercial_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>commercial Approved</label>
    <type>Checkbox</type>
</CustomField>