force-app/main/default/objects/SBQQ__Quote__c/fields/Count_of_Quotelines_with_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Quotelines_with_Markup_Amount__c</fullName>
    <label>Count of Quotelines with Markup Amount</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__MarkupAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>