force-app/main/default/objects/SBQQ__Quote__c/fields/CurrentValidationTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentValidationTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>CurrentValidationTime</label>
    <type>DateTime</type>
</CustomField>