force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Quote_Approval__c.field-meta.xml
<CustomField>
    <fullName>Customer_Quote_Approval__c</fullName>
    <label>Customer Quote Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Change Request/Revision.</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
                <isActive>false</isActive>
                <label>Invalid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>