force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <formula>TEXT(SBQQ__Account__r.Customer_Segment__c)</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>