force-app/main/default/objects/SBQQ__Quote__c/fields/Discount_Include_Doc__c.field-meta.xml
<CustomField>
    <fullName>Discount_Include_Doc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Include(Doc)</label>
    <type>Checkbox</type>
</CustomField>