force-app/main/default/objects/SBQQ__Quote__c/fields/Expected_Delivery_Period__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Period__c</fullName>
    <label>Expected Delivery Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 weeks</fullName>
            </value>
            <value>
                <fullName>1-2 weeks</fullName>
            </value>
            <value>
                <fullName>3-4 weeks</fullName>
            </value>
            <value>
                <fullName>5-8 weeks</fullName>
            </value>
            <value>
                <fullName>8-10 weeks</fullName>
            </value>
            <value>
                <fullName>10-12 weeks</fullName>
            </value>
            <value>
                <fullName>12-16 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>