force-app/main/default/objects/SBQQ__Quote__c/fields/ExpiredQuotes__c.field-meta.xml
<CustomField>
    <fullName>ExpiredQuotes__c</fullName>
    <formula>IF(
    SBQQ__ExpirationDate__c&lt; TODAY(),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ExpiredQuotes</label>
    <type>Checkbox</type>
</CustomField>