force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Calculated_On_City__c.field-meta.xml
<CustomField>
    <fullName>Freight_Calculated_On_City__c</fullName>
    <label>Freight Calculated On City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Freight_Calculated_On_State__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Kokrajhar</fullName>
            </value>
            <value>
                <fullName>Brepta</fullName>
            </value>
            <value>
                <fullName>Guwathi</fullName>
            </value>
            <value>
                <fullName>Dispur</fullName>
            </value>
            <value>
                <fullName>Tezpur</fullName>
            </value>
            <value>
                <fullName>Nagaon</fullName>
            </value>
            <value>
                <fullName>Jorgat</fullName>
            </value>
            <value>
                <fullName>Sivsagar</fullName>
            </value>
            <value>
                <fullName>Dibrughar</fullName>
            </value>
            <value>
                <fullName>Tinsukiya</fullName>
            </value>
            <value>
                <fullName>Golaghat</fullName>
            </value>
            <value>
                <fullName>Dimpaur</fullName>
            </value>
            <value>
                <fullName>Silchar</fullName>
            </value>
            <value>
                <fullName>Tirpura</fullName>
            </value>
            <value>
                <fullName>Agartala</fullName>
            </value>
            <value>
                <fullName>Udaiput</fullName>
            </value>
            <value>
                <fullName>Aizwal</fullName>
            </value>
            <value>
                <fullName>Implhal</fullName>
            </value>
            <value>
                <fullName>Sikkim</fullName>
            </value>
            <value>
                <fullName>Gangtok</fullName>
            </value>
            <value>
                <fullName>Vizag</fullName>
            </value>
            <value>
                <fullName>Vijayawada</fullName>
            </value>
            <value>
                <fullName>Rajamandri</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Kakinada</fullName>
            </value>
            <value>
                <fullName>Ongole</fullName>
            </value>
            <value>
                <fullName>Vijayanagaram</fullName>
            </value>
            <value>
                <fullName>Srikakulam</fullName>
            </value>
            <value>
                <fullName>Betthia</fullName>
            </value>
            <value>
                <fullName>Gopalganj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>