force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Includes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Includes__c</fullName>
    <label>Freight Included</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Freight_Terms__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included in the Quote</fullName>
            </value>
            <value>
                <fullName>Extras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>