force-app/main/default/objects/SBQQ__Quote__c/fields/Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>Freight_Terms__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Borne by IFB</fullName>
                <default>true</default>
                <label>Borne by IFB</label>
            </value>
            <value>
                <fullName>Borne by Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>