force-app/main/default/objects/SBQQ__Quote__c/fields/Fright_Charges__c.field-meta.xml
<CustomField>
    <fullName>Fright_Charges__c</fullName>
    <label>Freight Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>