force-app/main/default/objects/SBQQ__Quote__c/fields/IFB_GST_No__c.field-meta.xml
<CustomField>
    <fullName>IFB_GST_No__c</fullName>
    <formula>Bank_Detail__r.GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IFB_GST No</label>
    <type>Text</type>
</CustomField>