force-app/main/default/objects/SBQQ__Quote__c/fields/Installation_Level__c.field-meta.xml
<CustomField>
    <fullName>Installation_Level__c</fullName>
    <label>Installation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground</fullName>
                <default>true</default>
                <label>Ground</label>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Above</fullName>
            </value>
            <value>
                <fullName>Ground Above Basement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>