force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Reason_for_Markup_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Reason_for_Markup_Blank__c</fullName>
    <formula>IF(
	AND
	(
		$User.Bypass_Validation_Rules__c = FALSE,
		ISPICKVAL(SBQQ__Opportunity2__r.Product_category__c, &apos;ILM&apos;),
		OR
		(
			Total_Markup_Amount__c &gt; 0,
			Total_Markup_Rate__c &gt; 0
		),
		ISBLANK(Reason_for_Markup__c)
	), 
	TRUE, 
	FALSE
)</formula>
    <label>Is Reason for Markup Blank</label>
    <type>Checkbox</type>
</CustomField>