force-app/main/default/objects/SBQQ__Quote__c/fields/Layout_Required__c.field-meta.xml
<CustomField>
    <fullName>Layout_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is only used by IDW Product</description>
    <label>Layout Required</label>
    <type>Checkbox</type>
</CustomField>