force-app/main/default/objects/SBQQ__Quote__c/fields/Maximum_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Discount__c</fullName>
    <label>Maximum Discount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__TotalDiscountRate__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>