force-app/main/default/objects/SBQQ__Quote__c/fields/Minimum_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Markup_Amount__c</fullName>
    <label>Minimum Markup Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__MarkupAmount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>