force-app/main/default/objects/SBQQ__Quote__c/fields/NSM_User__c.field-meta.xml
<CustomField>
    <fullName>NSM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Custom_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>