force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Split_ratio__c.field-meta.xml
<CustomField>
    <fullName>Payment_Split_ratio__c</fullName>
    <inlineHelpText>Payment Split Ratio must be in the format 40:30, 20:30:10, etc.</inlineHelpText>
    <label>Payment Split ratio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>