force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <defaultValue>0.4</defaultValue>
    <label>Advance Payment (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>