force-app/main/default/objects/SBQQ__Quote__c/fields/Price_cost_Editable__c.field-meta.xml
<CustomField>
    <fullName>Price_cost_Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price/cost Editable</label>
    <type>Checkbox</type>
</CustomField>