force-app/main/default/objects/SBQQ__Quote__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <formula>IF(ISPICKVAL(SBQQ__Opportunity2__r.Product_category__c, &apos;ILM&apos;),&apos;Industrial Laundry Machine&apos;, IF(ISPICKVAL(SBQQ__Opportunity2__r.Product_category__c, &apos;IDW&apos;), &apos;Industrial Dishwasher&apos;,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product category</label>
    <type>Text</type>
</CustomField>