force-app/main/default/objects/SBQQ__Quote__c/fields/Pterm__c.field-meta.xml
<CustomField>
    <fullName>Pterm__c</fullName>
    <formula>Payment_Term__c*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pterm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>