force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner__c</fullName>
    <formula>IF(
ISBLANK(Owner:Queue.Id),
Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,
Owner:Queue.QueueName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Owner</label>
    <type>Text</type>
</CustomField>