force-app/main/default/objects/SBQQ__Quote__c/fields/Reason_for_Markup__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Markup__c</fullName>
    <label>Reason for Markup</label>
    <type>TextArea</type>
</CustomField>