force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Amount_Including_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Including_GST__c</fullName>
    <formula>Total_GST_Amount__c + SBQQ__NetAmount__c + Fright_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (Incl GST &amp; Freight))</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>