force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Area_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Feet__c</fullName>
    <description>Freight Total area feild</description>
    <label>Total Area Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>