force-app/main/default/objects/SBQQ__Quote__c/fields/Total_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_GST__c</fullName>
    <formula>Total_GST_Amount__c / SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>