force-app/main/default/objects/SBQQ__Quote__c/fields/Total_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Markup_Amount__c</fullName>
    <label>Total Markup Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__MarkupAmount__c</summarizedField>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>