force-app/main/default/objects/SBQQ__Quote__c/fields/WarrantyTerm_In_Year__c.field-meta.xml
<CustomField>
    <fullName>WarrantyTerm_In_Year__c</fullName>
    <defaultValue>1</defaultValue>
    <label>WarrantyTerm(In Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>