force-app/main/default/objects/SBQQ__Quote__c/recordTypes/BOQ_specified.recordType-meta.xml
<RecordType>
    <fullName>BOQ_specified</fullName>
    <active>true</active>
    <label>BOQ/URS specified</label>
</RecordType>