force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Exports.recordType-meta.xml
<RecordType>
    <fullName>Exports</fullName>
    <active>true</active>
    <label>Exports</label>
</RecordType>