force-app/main/default/objects/SBQQ__Quote__c/recordTypes/GeM.recordType-meta.xml
<RecordType>
    <fullName>GeM</fullName>
    <active>true</active>
    <label>GeM</label>
</RecordType>