force-app/main/default/objects/SBQQ__Quote__c/recordTypes/Rate_Contract.recordType-meta.xml
<RecordType>
    <fullName>Rate_Contract</fullName>
    <active>true</active>
    <label>Rate Contract</label>
</RecordType>